[package]
name = "test_lindera_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lindera = { version = "0.3.4" }
# https://github.com/lindera-morphology/lindera/issues/62
#lindera = { version = "0.7" }
